# memsearch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json
.github/: release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  release-drafter.yml  release.yml  test.yml
architecture/: index.html
ccplugin/: README.md
ccplugin/.claude-plugin/: plugin.json
ccplugin/hooks/: common.sh  hooks.json  parse-transcript.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
ccplugin/scripts/: derive-collection.sh
changelog/: claude-code-plugin-skill-surface.changelog.md
claude-plugin/: index.html
claude-plugin/hooks/: index.html
claude-plugin/progressive-disclosure/: index.html
claude-plugin/troubleshooting/: index.html
cli/: index.html
design/: claude-code-plugin-skill-surface.design.md
design-philosophy/: index.html
docs/: architecture.md  claude-plugin.md  cli.md  design-philosophy.md  faq.md  getting-started.md  index.md  integrations.md  python-api.md  troubleshooting.md
docs/claude-plugin/: hooks.md  index.md  progressive-disclosure.md  troubleshooting.md
docs/home/: comparison.md  configuration.md  embedding-evaluation.md  for-developers.md  for-users.md  skills-from-memory.md  why.md
evaluation/: README.md
examples/: test_e2e.py
faq/: index.html
getting-started/: index.html
home/comparison/: index.html
home/configuration/: index.html
home/embedding-evaluation/: index.html
home/for-developers/: index.html
home/for-users/: index.html
home/skills-from-memory/: index.html
home/why/: index.html
integrations/: index.html
phase/: SUMMARY.md  phase-001-01-add-direct-search-and-expand-skills.md  phase-001-02-add-session-recall-and-diagnostics-skills.md  phase-001-03-sync-docs-and-verify-skill-surface.md  phase-001-04-add-memory-router-orchestration-skill.md
plugin/: README.md
plugins/claude-code/: README.md  transcript.py
plugins/codex/: README.md
plugins/openclaw/: README.md  index.js  index.ts  install.sh  openclaw.plugin.json  package.json
plugins/opencode/: README.md  index.test.ts  index.ts  install.sh  package.json
python-api/: index.html
scripts/: benchmark_reranking.py  scenario_validation.py  sync-prompts.sh
search/: search_index.json
src/memsearch/: __init__.py  chunker.py  cli.py  compact.py  config.py  core.py  index_report.py  index_state.py  io.py  maintenance.py  reranker.py  skills.py  (+3 more)
stylesheets/: terminal.css
tests/: test_ccplugin_hooks.py  test_chunk_id_format.py  test_chunker.py  test_chunker_edge_cases.py  test_chunker_headings.py  test_chunker_utilities.py  test_claude_code_skills.py  test_claude_hooks.py  test_claude_parse_transcript.py  test_claude_stop_hook_index_failures.py  test_cli.py  test_cli_compact.py  test_cli_config_helpers.py  test_cli_edge_cases.py  test_cli_error_handling.py  test_cli_help.py  test_cli_helpers.py  test_cli_list.py  test_codex_parse_rollout.py  test_codex_rollout_parser.py  test_codex_stop_hook_utf8.py  test_codex_stop_hook_worker.py  test_compact.py  test_compact_cli.py  test_compact_edge_cases.py  test_compact_prompt.py  test_config.py  test_config_edge_cases.py  test_config_env_resolution.py  test_config_validation.py  test_core.py  test_core_edge_cases.py  test_core_encoding.py  test_core_search_filters.py  test_core_unit.py  test_date_filter.py  test_embed_batching.py  test_embedding_utils.py  test_embeddings_edge_cases.py  test_embeddings_factory.py  (+40 more)
troubleshooting/: index.html
(+69 files in other folders)
